--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,8 @@ body{
             border-radius: 50px;
             box-sizing: border-box;
             font-family: monospace;
-            font-size: 26px;
+            font-size: 30px;
+            font-weight: 900;
             color: deepskyblue;
             outline: none;
             transition: 0.5s;
