--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,31 @@ body {
   background: #140f1d;
 }
 
+body .title {
+  width: 100%;
+  height: 40vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: deepskyblue;
+}
+
+body .title h1 {
+  text-align: center;
+}
+
 body .box {
+  max-width: 350px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -46,4 +70,15 @@ body .box:hover input {
   width: 350px;
   background: #272133;
   border-radius: 10px;
+}
+
+@media (min-width: 320px) and (max-width: 757px) {
+  .title h1 {
+    font-size: 1.7em;
+  }
+  .box:hover input {
+    width: 310px !important;
+    background: #272133;
+    border-radius: 10px;
+  }
 }
