--- a/css/main.scss
+++ b/css/main.scss
@@ -1,15 +1,32 @@
 @charset "utf-8";
+@import "_mixin";
 
-body{
+body {
     margin: 0;
     padding: 0;
     background: #140f1d;
-    .box{
+
+    .title {
+        width: 100%;
+        height: 40vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+        color: deepskyblue;
+        h1{
+            text-align: center;
+        }
+    }
+
+    .box {
+        max-width: 350px;
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
-        .input{
+        transform: translate(-50%, -50%);
+
+        .input {
             padding: 10px;
             width: 80px;
             height: 80px;
@@ -25,22 +42,48 @@ body{
             transition: 0.5s;
         }
 
-        i{
+        i {
             position: absolute;
             top: 37px;
             right: 9px;
-            transform: translate(-40%,-40%);
-            font-size:36px;
+            transform: translate(-40%, -40%);
+            font-size: 36px;
             color: deepskyblue;
             transition: 0.2s;
         }
     }
 
-    .box:hover input{
+    .box:hover input {
         width: 350px;
         background: #272133;
         border-radius: 10px;
     }
 
+
+}
+
+
+// media query
+
+
+@include mobile {
+    .title{
+        h1{
+            font-size: 1.7em;
+        }
+    }
+
+    .box:hover input {
+        width: 310px !important;
+        background: #272133;
+        border-radius: 10px;
+    }
+}
+
+@include tablet {
+    
+}
+
+@include desktop {
 
 }
