--- a/css/_mixin.scss
+++ b/css/_mixin.scss
@@ -1,5 +1,9 @@
 @import "_variables";
 
+
+
+// 반응형 믹스인
+
 @mixin mobile {
   @media (min-width: #{$breakpoint-mobile}) and (max-width: #{$breakpoint-tablet - 1px}) {
     @content;
