--- a/css/main.css
+++ b/css/main.css
@@ -27,16 +27,31 @@ body .title h1 {
   text-align: center;
 }
 
-body .box {
-  max-width: 350px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+body .contWrap {
+  width: 100%;
 }
 
-body .box .input {
+body .contWrap .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .contWrap .box .boxForm {
+  position: relative;
+}
+
+body .contWrap .box .input {
   padding: 10px;
   width: 80px;
   height: 80px;
@@ -54,7 +69,7 @@ body .box .input {
   transition: 0.5s;
 }
 
-body .box i {
+body .contWrap .box i {
   position: absolute;
   top: 37px;
   right: 9px;
@@ -66,7 +81,7 @@ body .box i {
   transition: 0.2s;
 }
 
-body .box:hover input {
+body .contWrap .box:hover input {
   width: 350px;
   background: #272133;
   border-radius: 10px;
