--- a/css/main.scss
+++ b/css/main.scss
@@ -19,53 +19,61 @@ body {
         }
     }
 
-    .box {
-        max-width: 350px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    .contWrap{
+        width: 100%;
+        .box {
+            // max-width: 350px;
+            // position: absolute;
+            // top: 50%;
+            // left: 50%;
+            // transform: translate(-50%, -50%);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
 
-        .input {
-            padding: 10px;
-            width: 80px;
-            height: 80px;
-            background: none;
-            border: 4px solid deepskyblue;
-            border-radius: 50px;
-            box-sizing: border-box;
-            font-family: monospace;
-            font-size: 30px;
-            font-weight: 900;
-            color: deepskyblue;
-            outline: none;
-            transition: 0.5s;
+
+            .boxForm{
+                position: relative;
+            }
+    
+            .input {
+                padding: 10px;
+                width: 80px;
+                height: 80px;
+                background: none;
+                border: 4px solid deepskyblue;
+                border-radius: 50px;
+                box-sizing: border-box;
+                font-family: monospace;
+                font-size: 30px;
+                font-weight: 900;
+                color: deepskyblue;
+                outline: none;
+                transition: 0.5s;
+            }
+    
+            i {
+                position: absolute;
+                top: 37px;
+                right: 9px;
+                transform: translate(-40%, -40%);
+                font-size: 36px;
+                color: deepskyblue;
+                transition: 0.2s;
+            }
         }
-
-        i {
-            position: absolute;
-            top: 37px;
-            right: 9px;
-            transform: translate(-40%, -40%);
-            font-size: 36px;
-            color: deepskyblue;
-            transition: 0.2s;
+    
+        .box:hover input {
+            width: 350px;
+            background: #272133;
+            border-radius: 10px;
         }
     }
-
-    .box:hover input {
-        width: 350px;
-        background: #272133;
-        border-radius: 10px;
-    }
-
-
 }
 
 
 // media query
-
-
 @include mobile {
     .title{
         h1{
