--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap");
 @import "_mixin";
 
 body {
-    margin: 0;
-    padding: 0;
+    font-family: 'Black Han Sans', sans-serif;
     background: #140f1d;
 
     .title {
@@ -13,14 +13,28 @@ body {
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
-        color: deepskyblue;
-        h1{
+        color: $mainColor;
+        margin-bottom: 20px;
+
+        h1,
+        h2 {
             text-align: center;
+            margin: 15px 0;
+            word-break: keep-all;
+        }
+
+        h1 {
+            font-size: 3em;
+        }
+
+        h2 {
+            font-size: 2em;
         }
     }
 
-    .contWrap{
+    .contWrap {
         width: 100%;
+
         .box {
             // max-width: 350px;
             // position: absolute;
@@ -33,37 +47,37 @@ body {
             align-items: center;
 
 
-            .boxForm{
+            .boxForm {
                 position: relative;
             }
-    
+
             .input {
                 padding: 10px;
                 width: 80px;
                 height: 80px;
                 background: none;
-                border: 4px solid deepskyblue;
+                border: 4px solid $mainColor;
                 border-radius: 50px;
                 box-sizing: border-box;
                 font-family: monospace;
                 font-size: 30px;
                 font-weight: 900;
-                color: deepskyblue;
+                color: $mainColor;
                 outline: none;
                 transition: 0.5s;
             }
-    
+
             i {
                 position: absolute;
                 top: 37px;
                 right: 9px;
                 transform: translate(-40%, -40%);
                 font-size: 36px;
-                color: deepskyblue;
+                color: $mainColor;
                 transition: 0.2s;
             }
         }
-    
+
         .box:hover input {
             width: 350px;
             background: #272133;
@@ -74,10 +88,15 @@ body {
 
 
 // media query
+
 @include mobile {
-    .title{
-        h1{
-            font-size: 1.7em;
+    .title {
+        h1 {
+            font-size: 2.7em !important;
+        }
+
+        h2 {
+            font-size: 1.7em !important;
         }
     }
 
@@ -88,10 +107,6 @@ body {
     }
 }
 
-@include tablet {
-    
-}
+@include tablet {}
 
-@include desktop {
-
-}
+@include desktop {}
