--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,124 @@
-@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Stylish&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-decoration: none;
+}
+
 body {
-  font-family: 'Black Han Sans', sans-serif;
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body {
+  font-family: 'Stylish', sans-serif;
   background: #140f1d;
 }
 
@@ -29,6 +147,7 @@ body .title h2 {
   text-align: center;
   margin: 15px 0;
   word-break: keep-all;
+  font-weight: 200;
 }
 
 body .title h1 {
@@ -39,18 +158,16 @@ body .title h2 {
   font-size: 2em;
 }
 
-body .contWrap {
-  width: 100%;
-}
-
 body .contWrap .box {
+  width: 350px;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -91,6 +208,15 @@ body .contWrap .box i {
   color: deepskyblue;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+}
+
+body .contWrap .box .moveBtn {
+  margin: 40px 0 0 0;
+  color: #fff;
+  font-size: 2em;
+  background: deepskyblue;
+  padding: 4px 7px;
+  border-radius: 10px;
 }
 
 body .contWrap .box:hover input {
