commit 2021.08.13 side PJ

--- a/css/main.scss
+++ b/css/main.scss
@@ -89,6 +89,8 @@ body {
                 background: $mainColor;
                 padding: 4px 7px;
                 border-radius: 10px;
+                border: 0;
+                font-family: 'Stylish', sans-serif;
             }
         }
 
