--- a/css/main.css
+++ b/css/main.css
@@ -217,6 +217,8 @@ body .contWrap .box .moveBtn {
   background: deepskyblue;
   padding: 4px 7px;
   border-radius: 10px;
+  border: 0;
+  font-family: 'Stylish', sans-serif;
 }
 
 body .contWrap .box:hover input {
